--- a/de.html
+++ b/de.html
@@ -21,7 +21,7 @@
 	<div class="mainDetails">
 		<div id="name">
 			<h1 class="quickFade delayTwo">Kai Karvinen, PhD</h1>
-			<h2 class="quickFade delayThree">Algorithmenentwickler</h2>
+			<h2 class="quickFade delayThree">Forschungsingenieur</h2>
 			<h3 class="quickFade delayFour">Regelungstechnik, Schätzung, Optimierung, Machinelles Lernen</h3>
 		</div>
 		
@@ -61,7 +61,7 @@
 							<li>Technical Session for Model-based Design Community<p class="subDetails">"Kai, thanks a lot for proposing, organizing and presenting the 1st Technical Session for the model-based design community. This was an excellent knowledge-sharing event."</p></li>
 							<li>Defensive Publication Award</li>
 						</ul></li>
-						<li>8 Erfindungsmeldungen; 5 Patentanmeldungen</li>
+						<li>9 Erfindungsmeldungen; 5 Patentanmeldungen</li>
 					</ul>
 				</article>
 				
@@ -167,7 +167,7 @@
 				</article>
 				<p></p>
 				<article>
-					<h2>BEng (Hons) in Elektrotechnik mit Auszeichnung<br>BSc in Physik</h2>
+					<h2>BEng (Hons) in Energietechnik mit Auszeichnung<br>BSc in Physik</h2>
 					<p class="subDetails">Curtin University, Bentley, Australien<span style="float:right">2010</span></p>
 					<ul type="square" margin-left=30px>
 						<li>Notendurchschnitt: 93.93% (Bestnote)</li>
@@ -195,19 +195,19 @@
 				</article>
 				<article>
 					<h3>Automated reservoir navigation</h3>
-					<p class="subDetails">US Patent Appl. No. 18/194,211. Angemeldet März 31, 2023.</p>
+					<p class="subDetails">Patent Appl. No. US18/194,211. Angemeldet März 31, 2023.</p>
 				</article>
 				<article>
 					<h3>Processing of directional survey data recorded during rotational drilling</h3>
-					<p class="subDetails">US Patent Appl. No. 18/157,111. Angemeldet Jan. 20, 2023.</p>
+					<p class="subDetails">Patent Appl. No. US18/157,111. Angemeldet Jan. 20, 2023.</p>
 				</article>
 				<article>
 					<h3>Adaptive trajectory control for automated directional drilling</h3>
-					<p class="subDetails">US Patent Appl. No. 17/882,109. Angemeldet Aug. 5, 2022.</p>
+					<p class="subDetails">Patent No. US12,129,751. Angemeldet Aug. 5, 2022.</p>
 				</article>
 				<article>
 					<h3>A method and apparatus to increase the measurement bandwidth of the lock-in amplifier</h3>
-					<p class="subDetails">AU Provisional Patent Appl. No. 2013904204. Angemeldet 31 Oct. 2013. Erloschen.</p>
+					<p class="subDetails">Patent Appl. No. AU2013904204. Angemeldet 31 Oct. 2013. Erloschen.</p>
 				</article>
 			</div>
 			<div class="clear"></div>
