--- a/de.html
+++ b/de.html
@@ -67,7 +67,7 @@
 				
 				<article>
 					<h2>Entwicklungsingenieur &mdash; Elektrotechnik</h2>
-					<p class="subDetails">Baker Hughes INTEQ GmbH, Celle, Deutschland<span style="float:right">Oct 2017 - Aug 2021</span></p>
+					<p class="subDetails">Baker Hughes INTEQ GmbH, Celle, Deutschland<span style="float:right">Okt 2017 - Aug 2021</span></p>
 					<ul type="square" margin-left=30px>
 						<li>Modellbasierte Algorithmenentwicklung, Testen und Verifizierung für Orientierungsmessungen und Richtungsschätzung, Downhole Steuerung, automatisiertes Richtbohren, Wellbore Positioning und Fehlermodellierung</li>
 						<li>Energize Prämien, einschließlich:<ul>
