--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="mainDetails">
 		<div id="name">
 			<h1 class="quickFade delayTwo">Kai Karvinen, PhD</h1>
-			<h2 class="quickFade delayThree">Research Engineer</h2>
+			<h2 class="quickFade delayThree">R&D Engineer</h2>
 			<h3 class="quickFade delayFour">Control, Estimation, Optimization, Machine learning</h3>
 		</div>
 		
@@ -118,13 +118,14 @@
 			
 			<div class="sectionContent">
 				<ul class="keySkills no-margin">
-					<li>Dynamics and Control</li>
+					<li>Dynamics and Control Systems</li>
+					<li>Modeling and System Identification</li>
 					<li>Estimation and Sensor Fusion</li>
 					<li>Kalman Filtering</li>
+					<li>Model-based Design</li>
 					<li>Optimization</li>
 					<li>Machine Learning and Statistics</li>
-					<li>System Identification</li>
-					<li>Real-time Automation</li>
+					<li>Signal Processing</li>
 				</ul>
 			</div>
 			<div class="clear"></div>
@@ -138,13 +139,13 @@
 			
 			<div class="sectionContent">
 				<ul class="keySkills no-margin">
-					<li>Model-based Design</li>
 					<li>Python</li>
 					<li>MATLAB/Simulink</li>
 					<li>C</li>
 					<li>Julia</li>
 					<li>LaTeX</li>
 					<li>Linux</li>
+					<li>Azure DevOps/Git</li>
 				</ul>
 			</div>
 			<div class="clear"></div>
