--- a/de.html
+++ b/de.html
@@ -21,7 +21,7 @@
 	<div class="mainDetails">
 		<div id="name">
 			<h1 class="quickFade delayTwo">Kai Karvinen, PhD</h1>
-			<h2 class="quickFade delayThree">Forschungsingenieur</h2>
+			<h2 class="quickFade delayThree">Forschungs- und Entwicklungsingenieur</h2>
 			<h3 class="quickFade delayFour">Regelungstechnik, Schätzung, Optimierung, Machinelles Lernen</h3>
 		</div>
 		
@@ -119,12 +119,13 @@
 			<div class="sectionContent">
 				<ul class="keySkills no-margin">
 					<li>Dynamik und Regelungstechnik</li>
+					<li>Modellierung und Systemidentifikation</li>
 					<li>Schätztheorie und Sensorfusion</li>
 					<li>Kalman-Filterung</li>
+					<li>Modellbasiertes Design</li>
 					<li>Optimierung</li>
 					<li>Machinelles Lernen und Statistik</li>
-					<li>Systemidentifizierung</li>
-					<li>Echtzeit-Automation</li>
+					<li>Signalverarbeitungsverfahren</li>
 				</ul>
 			</div>
 			<div class="clear"></div>
@@ -138,13 +139,13 @@
 			
 			<div class="sectionContent">
 				<ul class="keySkills no-margin">
-					<li>Modellbasiertes Design</li>
 					<li>Python</li>
 					<li>MATLAB/Simulink</li>
 					<li>C</li>
 					<li>Julia</li>
 					<li>LaTeX</li>
 					<li>Linux</li>
+					<li>Azure DevOps/Git</li>
 				</ul>
 			</div>
 			<div class="clear"></div>
