--- a/de.html
+++ b/de.html
@@ -69,7 +69,7 @@
 							<li>Technical Session for Model-based Design Community<p class="subDetails">"Kai, thanks a lot for proposing, organizing and presenting the 1st Technical Session for the model-based design community. This was an excellent knowledge-sharing event."</p></li>
 							<li>Defensive Publication Award</li>
 						</ul></li>-->
-						<li>9 Erfindungsmeldungen; 6 Patentanmeldungen</li>
+						<li>4 Defensivpublikationen, 3 Patentanmeldungen und 2 Konferenzbeiträge</li>
 					</ul>
 				</article>
 				
@@ -83,7 +83,8 @@
 							<li>Error Modeling Research and Development<p class="subDetails">"You have made our error modeling project possible, and you made it a success. Thank you for your great engagement and your outstanding contributions to the project."</p></li>
 							<li>Customer Success Story Winner October 2019</li>
 						</ul></li>-->
-						<li>7 Erfindungsmeldungen</li>
+						<li>Kundenerfolgsgeschichte Gewinner Oktober 2019</li>
+						<li>3 Defensivpublikationen, 3 Patentanmeldungen und 1 Geschäftsgeheimnis</li>
 					</ul>
 				</article>
 				
