--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<li>Technical Session for Model-based Design Community<p class="subDetails">"Kai, thanks a lot for proposing, organizing and presenting the 1st Technical Session for the model-based design community. This was an excellent knowledge-sharing event."</p></li>
 							<li>Defensive Publication Award</li>
 						</ul></li>-->
-						<li>9 invention disclosures; 6 patent applications</li>
+						<li>4 defensive publications, 3 patent applications and 2 conference papers</li>
 					</ul>
 				</article>
 				
@@ -83,7 +83,8 @@
 							<li>Error Modeling Research and Development<p class="subDetails">"You have made our error modeling project possible, and you made it a success. Thank you for your great engagement and your outstanding contributions to the project."</p></li>
 							<li>Customer Success Story Winner October 2019</li>
 						</ul></li>-->
-						<li>7 invention disclosures</li>
+						<li>Customer Success Story Winner October 2019</li>
+						<li>3 defensive publications, 3 patent applications and 1 trade secret</li>
 					</ul>
 				</article>
 				
