--- a/de.html
+++ b/de.html
@@ -277,7 +277,7 @@
 			
 			<div class="sectionContent padding-sm">
 				<article>
-					<h3>Nationalität</h3>
+					<h3>Staatsangehörigkeit</h3>
 					<p class="subDetails">Australisch, Finnisch</p>
 				</article>
 				<article>
