--- a/de.html
+++ b/de.html
@@ -48,7 +48,7 @@
 			<div class="sectionContent">
 				<article>
 					<h2>Entwicklungsingenieur &mdash; Regelungstechnik</h2>
-					<p class="subDetails">Carl Zeiss SMT GmbH, Oberkochen, Deutschland<span style="float:right">ab Sept 2025</span></p>
+					<p class="subDetails">Carl Zeiss SMT GmbH, Oberkochen, Deutschland<span style="float:right">Sept 2025 - heute</span></p>
 					<ul type="square" margin-left=30px>
 						<li>Modellbildung, Simulation und Analyse hochkomplexer mechatronischer Systeme für Mikrolithografie</li>
 						<li>Entwicklung von Regleralgorithmen zur schnellen und extrem genauen Positionierung feinmechanischer Komponenten</li>
