--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="sectionContent">
 				<article>
 					<h2>Development Engineer &mdash; Control Engineering</h2>
-					<p class="subDetails">Carl Zeiss SMT GmbH, Oberkochen, Germany<span style="float:right">from Sept 2025</span></p>
+					<p class="subDetails">Carl Zeiss SMT GmbH, Oberkochen, Germany<span style="float:right">Sept 2025 - present</span></p>
 					<ul type="square" margin-left=30px>
 						<li>Modeling, simulation and analysis of complex mechatronic systems for microlithography</li>
 						<li>Development of high-speed position control algorithms for precision components</li>
